# CrowdyCPP

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  schema.gql
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_codec.cpp  bench_e2e_latency.cpp
cmake/: CrowdyCPPConfig.cmake.in
docs/: e2e-coverage.md  parity-matrix.md
examples/: CMakeLists.txt  kit_seed_and_play.cpp  walker.cpp
include/crowdy/: client.hpp  crowdy.hpp  world.hpp
include/crowdy/core/: base64.hpp  bytes.hpp  clock.hpp  crypto.hpp  logger.hpp  result.hpp  spsc.hpp  uuid.hpp
include/crowdy/domains/: admin.hpp  auth.hpp  compute.hpp  domain_base.hpp  game_apps.hpp  game_model.hpp  groups.hpp  marketplace.hpp  operator.hpp  player_compute.hpp  player_model.hpp  player_wallet.hpp  portal.hpp  server_status.hpp  types.hpp  users.hpp  world_data.hpp
include/crowdy/graphql/: auth_state.hpp  dispatcher.hpp  errors.hpp  graphql_client.hpp  http.hpp  json.hpp
include/crowdy/kit/: abilities.hpp  actions.hpp  combat.hpp  core.hpp  decks.hpp  director.hpp  economy.hpp  engine.hpp  features.hpp  instances.hpp  inventory.hpp  kit.hpp  leaderboards.hpp  liveops.hpp  loot.hpp  matches.hpp  matchmaking.hpp  minigames.hpp  mobs.hpp  moderation.hpp  movement.hpp  npcs.hpp  objects.hpp  pets.hpp  plots.hpp  progression.hpp  quests.hpp  racing.hpp  social.hpp  telemetry.hpp  territory.hpp  wire.hpp  worldsim.hpp
include/crowdy/replication/: connection.hpp  session_provider.hpp  types.hpp  udp_socket.hpp
operations/actors/: Actors.graphql  DeleteActor.graphql
operations/appAccess/: AppGrantMemberCandidates.graphql  AppUserAccessByApp.graphql  ClaimFreeAppAccess.graphql  GrantMyAppAccess.graphql  RuntimePermissions.graphql
operations/apps/: App.graphql  CodeAdmissions.graphql  MarketplaceApps.graphql
operations/avatars/: Avatars.graphql
operations/billing/: BillingTiers.graphql  WalletTransactions.graphql
operations/channels/: AddChannelMember.graphql  Channel.graphql  ChannelMembers.graphql  ChannelPolicy.graphql  ChannelRoles.graphql  Channels.graphql  CreateChannel.graphql  CreateChannelRole.graphql  DeleteChannel.graphql  DeleteChannelRole.graphql  JoinChannel.graphql  LeaveChannel.graphql  MyChannels.graphql  RemoveChannelMember.graphql  RequestToJoinChannel.graphql  SetChannelMemberRoles.graphql  SetChannelPolicy.graphql  UpdateChannel.graphql  UpdateChannelRole.graphql
operations/compute/: ComputeModules.graphql
operations/controlPlane/: ControlPlane.graphql
operations/environments/: CreateEnvironment.graphql  DestroyEnvironment.graphql  EnvironmentDatacenters.graphql  EnvironmentFlavors.graphql  EnvironmentForwardVersions.graphql  EnvironmentQuote.graphql  EnvironmentRedeployPlan.graphql  EnvironmentVersions.graphql  LinkAppToEnvironment.graphql  OrgEnvironment.graphql  OrgEnvironments.graphql  PurgeEnvironment.graphql  RedeployEnvironment.graphql  RestartEnvironmentServices.graphql  ResumeEnvironment.graphql  UpdateEnvironmentBillingTiers.graphql  UpdateEnvironmentScaling.graphql
operations/gameApps/: GameApps.graphql
operations/gameModel/: GameModelAutomations.graphql  GameModelRuntime.graphql  GameModelStudio.graphql
operations/host/: Host.graphql
operations/marketplace/: Marketplace.graphql
operations/organizations/: MemberRoles.graphql
operations/payments/: CapturePaypalCheckout.graphql  Checkouts.graphql  MyCheckouts.graphql  PaymentEvents.graphql
operations/platform/: PlatformConfig.graphql
operations/playerCompute/: PlayerCompute.graphql
operations/playerModel/: PlayerModel.graphql
operations/playerWallet/: PlayerWallet.graphql
operations/sharedEnvironment/: SharedEnvironment.graphql
operations/teams/: AddTeamMember.graphql  CreateTeam.graphql  CreateTeamRole.graphql  DeleteTeam.graphql  DeleteTeamRole.graphql  JoinTeam.graphql  LeaveTeam.graphql  MyTeams.graphql  RemoveTeamMember.graphql  RequestToJoinTeam.graphql  SetTeamMemberRoles.graphql  SetTeamPolicy.graphql  Team.graphql  TeamMembers.graphql  TeamPolicy.graphql  TeamRoles.graphql  Teams.graphql  UpdateTeam.graphql  UpdateTeamRole.graphql
operations/udp/: SendChannelMessage.graphql  SendSingleActorMessage.graphql  UdpNotifications.graphql
operations/usage/: AppGraphqlOperations.graphql  AppUsageSummary.graphql  EnvironmentUsageByApp.graphql  EnvironmentUsageSummary.graphql  OrgUsageByEnvironment.graphql  PlayerPulse.graphql
operations/users/: FreePlayWindow.graphql  SetOperator.graphql  UsersPaginated.graphql
operations/voxels/: VoxelUpdateHistory.graphql
scripts/: check-content-policy.sh  codegen.mjs  schema-sync.mjs
src/: client.cpp
src/core/: base64.cpp  clock.cpp  crypto_openssl.cpp  logger.cpp  uuid.cpp
src/graphql/: async_transport.cpp  auth_state.cpp  errors.cpp  graphql_client.cpp  http_curl.cpp  json.cpp
src/replication/: connection.cpp  udp_socket.cpp
src/session/: world_session.cpp
tests/: CMakeLists.txt  codec_struct_test.cpp  core_test.cpp  graphql_client_test.cpp  json_test.cpp  kit_test.cpp  kit_wire_test.cpp  player_runtime_surface_test.cpp  replication_test.cpp  session_test.cpp  test_util.hpp  wire_test.cpp
tests/e2e/: CMakeLists.txt  README.md  e2e_actors_crud.cpp  e2e_auth_identities.cpp  e2e_billing_quotas.cpp  e2e_chunk_store_live.cpp  e2e_chunks.cpp  e2e_compute.cpp  e2e_cross_app.cpp  e2e_cross_server.cpp  e2e_cross_tenant.cpp  e2e_durable_mirror.cpp  e2e_game_model.cpp  e2e_gamer_journey.cpp  e2e_host_election.cpp  e2e_kit_combat.cpp  e2e_kit_decks.cpp  e2e_kit_economy.cpp  e2e_kit_features.cpp  e2e_kit_inventory.cpp  e2e_kit_journey.cpp  e2e_kit_leaderboards.cpp  e2e_kit_loot.cpp  e2e_kit_matches.cpp  e2e_kit_npcs.cpp  e2e_kit_objects.cpp  e2e_kit_plots.cpp  e2e_kit_progression.cpp  e2e_kit_quests.cpp  e2e_kit_social.cpp  e2e_kit_worldsim.cpp  e2e_malicious_input.cpp  e2e_negative_auth.cpp  e2e_operator.cpp  e2e_payments.cpp  e2e_permission_refresh.cpp  e2e_self_echo.cpp  e2e_soak_two_clients.cpp  e2e_spatial_distance.cpp  e2e_state_avatars.cpp  (+10 more)
tools/parity/: blueprints-diff.mjs  dump-blueprints.mjs  dump_blueprints.cpp  parity.mjs
(+9 files in other folders)
